--- a/website.html
+++ b/website.html
@@ -14,6 +14,7 @@
             <img src="images/curiery.png" alt="Logo Cartoon">
             <p>Improve Atention</p>
             <p>Loja - Ecuador</p>
+            <p>Contac-us 0981922591</p>
         </div>
 
     </div>
