Logo Vertical Agregado

--- a/website.html
+++ b/website.html
@@ -15,6 +15,7 @@
             <p>Improve Atention</p>
             <p>Loja - Ecuador</p>
             <p>Contac-us 0981922591</p>
+            <img src="images/callmed-Vertical.jpg" alt="Logo Callmed">
         </div>
 
     </div>
