Cambio Tamaño Imagenes

--- a/website.html
+++ b/website.html
@@ -11,11 +11,15 @@
     <div style="display: grid; place-items:center; background-color: #ececec;">
         <div>
             <h1>Call Nurse System</h1>
-            <img src="images/curiery.png" alt="Logo Cartoon">
+            <img 
+                src="images/curiery.png" 
+                alt="Logo Cartoon" 
+                width="160px"
+                >
             <p>Improve Atention</p>
             <p>Loja - Ecuador</p>
             <p>Contac-us 0981922591</p>
-            <img src="images/callmed-Vertical.jpg" alt="Logo Callmed">
+            <img src="images/callmed-Vertical.jpg" alt="Logo Callmed" width="200px">
         </div>
 
     </div>
